crates/general/fixtures/invalid/type_field_equals.zt
-- Type-record fields use `:`, not `=`.

Bad :: type {
  field = Int;
}

#unit
